# hatchery

./: .gitignore  .ycm_extra_conf.py  Makefile  README.md  client.c  common.h  compile_c.sh  compile_server.sh  gen_cscope.sh  main.c  start_client.sh  start_server.sh  start_server_log.sh  tc.sh  tserver.sh
client/: CMakeLists.txt  client.c
common/: common.h
etc/: config_client.lua  config_server.lua
log/: log.c  log.h
server/: .ycm_extra_conf.py  CMakeLists.txt  hatchery.c
src/: .ycm_extra_conf.py
src/client/: client.c
src/etc/: config_server.lua
src/log/: CMakeLists.txt  log.c
src/server/: CMakeLists.txt  hatchery.c  main.c
src/utils/: log.c  log.h  mysql_utils.h
test/: Makefile  mysql_test.c  mysql_utils.h  select-test  select-test.c
utils/: CMakeLists.txt  mysql_utils.h  utils.c  utils.h
